--- a/Taxi/App.config
+++ b/Taxi/App.config
@@ -7,6 +7,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+
+  <connectionStrings>
+    <add name ="connstrng" connectionString="Data Source=(local);Initial Catalog=Taxi;Integrated Security=True"/>
+  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
