create SignUpBLL create SignUpDAL add signUp add keyevent

--- a/Taxi/Taxi.csproj
+++ b/Taxi/Taxi.csproj
@@ -82,8 +82,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\LoginBLL.cs" />
+    <Compile Include="BLL\SignUpBLL.cs" />
     <Compile Include="BLL\UserBLL.cs" />
     <Compile Include="DLL\LoginDAL.cs" />
+    <Compile Include="DLL\SignUpDAL.cs" />
     <Compile Include="DLL\UserDAL.cs" />
     <Compile Include="Forms\FormLogin.cs">
       <SubType>Form</SubType>
