--- a/Taxi/Taxi.csproj
+++ b/Taxi/Taxi.csproj
@@ -103,6 +103,12 @@
     <Compile Include="Localization.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\PriceUC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\PriceUC.Designer.cs">
+      <DependentUpon>PriceUC.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\RouteUC.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -137,6 +143,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControls\PriceUC.resx">
+      <DependentUpon>PriceUC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\RouteUC.resx">
       <DependentUpon>RouteUC.cs</DependentUpon>
     </EmbeddedResource>
