--- a/Taxi/Taxi.csproj
+++ b/Taxi/Taxi.csproj
@@ -113,11 +113,23 @@
     <Compile Include="Localization.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaxiUC\HistoryTaxi.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TaxiUC\HistoryTaxi.Designer.cs">
+      <DependentUpon>HistoryTaxi.cs</DependentUpon>
+    </Compile>
     <Compile Include="TaxiUC\OrdersUC.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="TaxiUC\OrdersUC.Designer.cs">
       <DependentUpon>OrdersUC.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserUC\HistoryUC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserUC\HistoryUC.Designer.cs">
+      <DependentUpon>HistoryUC.cs</DependentUpon>
     </Compile>
     <Compile Include="UserUC\PriceUC.cs">
       <SubType>UserControl</SubType>
@@ -170,6 +182,9 @@
     </Compile>
     <EmbeddedResource Include="TaxiUC\OrdersUC.resx">
       <DependentUpon>OrdersUC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserUC\HistoryUC.resx">
+      <DependentUpon>HistoryUC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserUC\PriceUC.resx">
       <DependentUpon>PriceUC.cs</DependentUpon>
