--- a/Taxi/Taxi.csproj
+++ b/Taxi/Taxi.csproj
@@ -113,6 +113,12 @@
     <Compile Include="Localization.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaxiUC\Good_Luck.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TaxiUC\Good_Luck.Designer.cs">
+      <DependentUpon>Good_Luck.cs</DependentUpon>
+    </Compile>
     <Compile Include="TaxiUC\HistoryTaxi.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -180,6 +186,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TaxiUC\Good_Luck.resx">
+      <DependentUpon>Good_Luck.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TaxiUC\HistoryTaxi.resx">
       <DependentUpon>HistoryTaxi.cs</DependentUpon>
     </EmbeddedResource>
@@ -265,6 +274,7 @@
     <None Include="Resources\History.png" />
     <None Include="Resources\orders.png" />
     <None Include="Resources\load.gif" />
+    <None Include="Resources\GL.png" />
     <Content Include="Resources\user.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
